# tick-counter

./: README.md  makefile
fmt_buf/: Cargo.toml
fmt_buf/src/: lib.rs
rp2040-counter/: Cargo.toml  makefile  rp2040-env.uf2
rp2040-counter/.cargo/: config
rp2040-counter/src/: main.rs  smalltact.rs
