[package]
name = "rp2040-env"
version = "0.1.0"
edition = "2021"

[dependencies]
rp-pico = "0.3.0"
cortex-m-rt = "0.7.1"
cortex-m = "0.7.4"
rp2040-boot2 = { version = "0.2.0", optional = true }
embedded-time = "0.12.1"
panic-halt= "0.2.0"
embedded-hal ="0.2.7"
ssd1306 = "0.7.0"
embedded-graphics = "0.7.1"
nb = "1.0"
fmt-buf = { path = "../fmt_buf" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
